# readme-generator

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
generator/: __init__.py  config.yaml  formats.py  models.py  template.txt
main/generator/: __init__.py  models.py
tests/: testing.py
