[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "readme-generator"
version = "1.0.0"
authors = [
    {name = "Chino Franco", email = "chino.franco@gmail.com"},
]
description = "A Python GUI-based app that generates a README Markdown file by selecting inputs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"

classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators"
]

[project.urls]
repository = "https://github.com/jgfranco17/readme-generator"